--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RecipeApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".FavoriteActivity"
@@ -33,6 +34,8 @@
         <activity
             android:name=".SearchActivity"
             android:exported="false" />
+        <activity android:name=".CategoryRecipesActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
